--- a/nano/templates/identification_computer.tmpl
+++ b/nano/templates/identification_computer.tmpl
@@ -188,9 +188,9 @@
                 </td>
               </tr>
               <tr>
-                <th style="color: '#808080';">Stavery</th>
+                <th style="color: '#808080';">Civilian</th>
                 <td>
-                  {{for data.stavery_jobs}}
+                  {{for data.civilian_jobs}}
                     {{if index && index % 6 === 0}}
                       </td></tr><tr><th></th><td>
                     {{/if}}
