--- a/nano/templates/pda.tmpl
+++ b/nano/templates/pda.tmpl
@@ -347,7 +347,7 @@ Used In File(s): \code\game\objects\items\devices\PDA\PDA.dm
                     {{/for}}
                 {{/if}}
                 {{if data.manifest.civ}}
-                    <tr><th colspan="3" class="civ">Stavery</th></tr>
+                    <tr><th colspan="3" class="civ">Civilian</th></tr>
                     {{for data.manifest["civ"]}}
                         {{if value.rank == "Head of Personnel"}}
                             <tr><td><span class="good">{{:value.name}}</span></td><td><span class="good">{{:value.rank}}</span></td><td><span class="good">{{:value.active}}</span></td></tr>
